--- a/src/Runtime/operator/config/manager/manager.yaml
+++ b/src/Runtime/operator/config/manager/manager.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: altinn-studio-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -65,6 +56,28 @@ spec:
           - --health-probe-bind-address=:8081
         image: controller:latest
         name: manager
+        env:
+          - name: OPERATOR_UPGRADE_CHANNEL
+            valueFrom:
+              configMapKeyRef:
+                name: runtime-environment
+                key: upgrade_channel
+          - name: OPERATOR_ENVIRONMENT
+            valueFrom:
+              configMapKeyRef:
+                name: runtime-environment
+                key: environment
+          - name: OPERATOR_SERVICEOWNER
+            valueFrom:
+              configMapKeyRef:
+                name: runtime-environment
+                key: serviceowner
+          - name: OPERATOR_CONFIG_FILE
+            value: /etc/operator-config/config.env
+        volumeMounts:
+          - name: config
+            mountPath: /etc/operator-config
+            readOnly: true
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -93,3 +106,7 @@ spec:
             memory: 64Mi
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
+      volumes:
+        - name: config
+          configMap:
+            name: operator-config
