--- a/src/Runtime/operator/config/rbac/role.yaml
+++ b/src/Runtime/operator/config/rbac/role.yaml
@@ -5,6 +5,15 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - update
+  - watch
+- apiGroups:
   - resources.altinn.studio
   resources:
   - maskinportenclients
