--- a/src/Runtime/operator/config/samples/resources_v1alpha1_maskinportenclient.yaml
+++ b/src/Runtime/operator/config/samples/resources_v1alpha1_maskinportenclient.yaml
@@ -2,7 +2,7 @@ apiVersion: resources.altinn.studio/v1alpha1
 kind: MaskinportenClient
 metadata:
   labels:
-    app: local-testapp-deployment
-  name: local-testapp
+    app: ttd-localtestapp-deployment
+  name: ttd-localtestapp
 spec:
-  scopes: ['altinn:resourceregistry/resource.read']
+  scopes: ["altinn:serviceowner/instances.read", "altinn:serviceowner/instances.write"]
