--- a/src/Runtime/operator/Dockerfile.fakes
+++ b/src/Runtime/operator/Dockerfile.fakes
@@ -1,5 +1,5 @@
 # Build the manager binary
-FROM golang:1.22 AS builder
+FROM golang:1.25-trixie@sha256:03c629da2a724b8978e9b571a40f3afa65ddd30a978464c6de99c4f4c2fe2314 AS builder
 ARG TARGETOS
 ARG TARGETARCH
 
@@ -7,6 +7,12 @@ WORKDIR /workspace
 # Copy the Go Modules manifests
 COPY go.mod go.mod
 COPY go.sum go.sum
+
+# Remove the test fixture dependency from go.mod as it's not needed for building binaries
+# The test/harness package is only imported by test files, not by cmd/proxy or cmd/worker
+RUN sed -i '/altinn.studio\/runtime-fixture v/d' go.mod && \
+    sed -i '/replace altinn.studio\/runtime-fixture/d' go.mod
+
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
 RUN go mod download
@@ -19,14 +25,14 @@ COPY . ./
 # was called. For example, if we call make docker-build in a local env which has the Apple Silicon M1 SO
 # the docker BUILDPLATFORM arg will be linux/arm64 when for Apple x86 it will be linux/amd64. Therefore,
 # by leaving it empty we can ensure that the container and binary shipped on it will have the same platform.
-RUN CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o maskinporten_fakes cmd/maskinporten_fakes/main.go
+RUN CGO_ENABLED=0 GOOS=${TARGETOS:-linux} GOARCH=${TARGETARCH} go build -a -o fakes cmd/fakes/main.go
 
-# Use distroless as minimal base image to package the maskinporten_fakes binary
+# Use distroless as minimal base image to package the fakes binary
 # Refer to https://github.com/GoogleContainerTools/distroless for more details
 FROM gcr.io/distroless/static:nonroot
 WORKDIR /
-COPY --from=builder /workspace/maskinporten_fakes .
-COPY --from=builder /workspace/local.env .
+COPY --from=builder /workspace/fakes .
+COPY --from=builder /workspace/localtest.env .
 USER 65532:65532
 
-ENTRYPOINT ["/maskinporten_fakes"]
+ENTRYPOINT ["/fakes"]
