--- a/src/Runtime/operator/docker-compose.yml
+++ b/src/Runtime/operator/docker-compose.yml
@@ -7,10 +7,11 @@ services:
       - "4317:4317"   # OTLP gRPC receiver
       - "4318:4318"   # OTLP HTTP receiver
 
-  maskinporten_fakes:
+  fakes:
     container_name: operator-fakes
     build:
       dockerfile: Dockerfile.fakes
     ports:
       - "8050:8050" # Maskinporten API
       - "8051:8051" # Maskinporten self service API
+      - "8052:8052" # Org Registry API
