--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -21,27 +21,27 @@ jobs:
         run: |
           echo "127.0.0.1 local.altinn.cloud" | sudo tee -a /etc/hosts
 
-      - name: Start LocalTest backend
-        working-directory: src/Runtime/localtest
+      - name: Start LocalTest, component-library and install frontend deps
         run: |
-          # Build and start localtest in background
-          docker compose up -d --build > /dev/null 2>&1
+          # Start LocalTest backend build in background
+          (cd src/Runtime/localtest && docker compose up -d --build > /dev/null 2>&1) & DOCKER_PID=$!
 
-          # Wait for localtest to be ready
-          timeout 120 bash -c 'until curl -f http://local.altinn.cloud/ > /dev/null 2>&1; do sleep 2; done'
-        env:
-          TEST_DOMAIN: local.altinn.cloud
-          ALTINN3LOCAL_PORT: 80
+          # Start frontend deps install in background
+          (cd src/App/frontend && yarn install) & YARN_PID=$!
 
-      - name: Build and start component-library test app
-        working-directory: src/test/apps/component-library/App
-        run: |
+          # Build .NET app in foreground
+          cd src/test/apps/component-library/App
           dotnet restore
           dotnet build --no-restore
 
+          # Wait for background processes
+          wait $DOCKER_PID $YARN_PID
+
+          # Now start services and wait for readiness
+          timeout 120 bash -c 'until curl -f http://local.altinn.cloud/ > /dev/null 2>&1; do sleep 2; done'
+
           # Start the app in background
-          nohup dotnet run --no-build > app.log 2>&1 &
-          APP_PID=$!
+          nohup dotnet run --no-build > app.log 2>&1 & APP_PID=$!
 
           # Then do the health check with more attempts
           echo "Waiting for app to start listening on port 5005..."
@@ -55,10 +55,9 @@ jobs:
             exit 1
           fi
 
-      - name: Install frontend dependencies
-        working-directory: src/App/frontend
-        run: |
-          yarn install
+        env:
+          TEST_DOMAIN: local.altinn.cloud
+          ALTINN3LOCAL_PORT: 80
 
       - name: Run Lighthouse CI with authentication
         working-directory: src/App/frontend
