simplifies login with puppeteer instead of js script

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Run Lighthouse CI with authentication
         working-directory: src/App/frontend
-        run: node lighthouse-auth.mjs
+        run: yarn run lhci
       - name: Upload Lighthouse results
         if: always()
         uses: actions/upload-artifact@v4
