--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -62,6 +62,8 @@ jobs:
           TEST_DOMAIN: local.altinn.cloud
           ALTINN3LOCAL_PORT: 80
 
+      - name: Install puppeteer globally
+        run: npm i -g puppeteer
       - name: Run Lighthouse CI with authentication
         working-directory: src/App/frontend
         run: yarn run lhci
