--- a/src/App/frontend/package.json
+++ b/src/App/frontend/package.json
@@ -112,6 +112,7 @@
     "mime": "4.1.0",
     "mini-css-extract-plugin": "2.9.4",
     "prettier": "3.6.2",
+    "puppeteer": "^24.29.0",
     "react-refresh": "0.18.0",
     "resize-observer-polyfill": "1.5.1",
     "source-map-loader": "5.0.0",
