--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -64,6 +64,11 @@ jobs:
       - name: Run Lighthouse CI with authentication
         working-directory: src/App/frontend
         run: yarn run lhci
+      - name: Debug - List files
+        run: |
+          ls -la src/App/frontend/
+          find . -name ".lighthouseci" -type d 2>/dev/null ||
+          echo "No .lighthouseci directory found"
       - name: Upload Lighthouse results
         if: always()
         uses: actions/upload-artifact@v4
