--- a/charts/altinn-designer/templates/deployment.yaml
+++ b/charts/altinn-designer/templates/deployment.yaml
@@ -13,7 +13,17 @@ spec:
     metadata:
       labels:
         run: altinn-designer
+        {{- if .Values.serviceAccount.useWorkloadIdentity }}
+        azure.workload.identity/use: "true"
+        {{- end }}
+      {{- if .Values.serviceAccount.useWorkloadIdentity }}
+      annotations:
+        azure.workload.identity/use: "true"
+      {{- end }}
     spec:
+      {{- if .Values.serviceAccount.enabled }}
+      serviceAccountName: {{ .Values.serviceAccount.name }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           lifecycle:
