--- a/charts/altinn-designer/values.yaml
+++ b/charts/altinn-designer/values.yaml
@@ -2,6 +2,11 @@ replicaCount: 1
 
 environment: dev
 
+serviceAccount:
+  enabled: true
+  name: "altinn-designer"
+  useWorkloadIdentity: true
+
 image:
   repository: altinntjenestercontainerregistry.azurecr.io/altinn-core
   containerPort: 5000
