--- a/infra/runtime/syncroot/base/grafana/service-accounts/altinn-studio-gateway-sa.yaml
+++ b/infra/runtime/syncroot/base/grafana/service-accounts/altinn-studio-gateway-sa.yaml
@@ -2,12 +2,13 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaServiceAccount
 metadata:
   name: altinn-studio-gateway-sa
-  namespace: runtime-gateway
+  namespace: grafana
 spec:
-  name: 'altinn-studio-gateway-sa'
-  role: Editor
-  isDisabled: false
   instanceName: 'external-grafana'
+  isDisabled: false
+  name: altinn-studio-gateway-sa
+  role: Editor
+  suspend: false
   tokens:
-    - name: 'studio-gateway'
+    - name: studio-gateway
       secretName: studio-gateway-grafana-token
