--- a/src/Runtime/pdf3/Dockerfile.proxy
+++ b/src/Runtime/pdf3/Dockerfile.proxy
@@ -8,7 +8,7 @@ COPY go.mod go.sum ./
 
 # Remove the test fixture dependency from go.mod as it's not needed for building binaries
 # The test/harness package is only imported by test files, not by cmd/proxy or cmd/worker
-RUN sed -i '/require altinn.studio\/runtime-fixture/d' go.mod && \
+RUN sed -i '/altinn.studio\/runtime-fixture v/d' go.mod && \
     sed -i '/replace altinn.studio\/runtime-fixture/d' go.mod
 
 RUN go mod download
