--- a/src/Runtime/pdf3/infra/kustomize/at23/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/at23/kustomization.yaml
@@ -2,3 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
+patches:
+  # Delete GrafanaDashboard CRD (not available in AT environments)
+  - patch: |-
+      $patch: delete
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaDashboard
+      metadata:
+        name: pdf3-dashboard
