--- a/src/Runtime/pdf3/infra/kustomize/base/networkpolicy.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/networkpolicy.yaml
@@ -3,7 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: pdf3-proxy-allow-ingress-from-apps
 spec:
-  # Allow ingress traffic to proxy pods only from default namespace on port 80/TCP
+  # Allow ingress traffic to proxy pods from default namespace
+  # and monitoring agents
   podSelector:
     matchLabels:
       app: pdf3-proxy
@@ -14,9 +15,14 @@ spec:
     - namespaceSelector:
         matchLabels:
           kubernetes.io/metadata.name: default
-    ports:
-    - protocol: TCP
-      port: 5030  # Container port that maps to service port 80
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: monitoring # Prometheus (locally)
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: kube-system # Azure Monitor Agent (envs)
 ---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -35,6 +41,11 @@ spec:
     - podSelector:
         matchLabels:
           app: pdf3-proxy
-    ports:
-    - protocol: TCP
-      port: 5031  # HTTP port
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: monitoring # Prometheus (locally)
+  - from:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: kube-system # Azure Monitor Agent (envs)
