--- a/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/proxy.yaml
@@ -45,6 +45,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pdf3-proxy
+  labels:
+    app: pdf3-proxy
+    component: pdf3
   annotations:
     # Let's linkerd do topology (AZ) aware routing
     # Since Azure bills for cross-AZ traffic,
@@ -130,7 +133,6 @@ spec:
         # linkerd provides automatic mTLS and some nice features
         # such as topology aware routing
         linkerd.io/inject: enabled
-        config.linkerd.io/skip-outbound-ports: "5031"
     spec:
       affinity:
         podAntiAffinity:
@@ -189,7 +191,7 @@ spec:
               protocol: TCP
           env:
           - name: WORKER_HTTP_ADDR
-            value: http://pdf3-worker:5031
+            value: http://pdf3-worker:80
           # Startup probe allows up to 90 seconds (30 * 3s) for the container to start
           # This prevents the liveness probe from killing slow-starting containers
           # Once startup succeeds, liveness/readiness probes take over
@@ -225,3 +227,16 @@ spec:
             requests:
               cpu: 50m
               memory: 128Mi
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: pdf3-proxy
+spec:
+  selector:
+    matchLabels:
+      app: pdf3-proxy
+  endpoints:
+  - port: http
+    path: /metrics
+    interval: 10s
