--- a/src/Runtime/pdf3/infra/kustomize/base/worker.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/worker.yaml
@@ -63,12 +63,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pdf3-worker
+  labels:
+    app: pdf3-worker
+    component: pdf3
 spec:
   # ClusterIP is the default and recommended type for internal services
   # Explicit declaration improves clarity and prevents accidental exposure
   type: ClusterIP
   ports:
-  - port: 5031
+  - port: 80
     targetPort: 5031
     protocol: TCP
     name: http
@@ -232,3 +235,16 @@ spec:
           volumeMounts:
           - mountPath: /tmp
             name: tmpdisk
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: pdf3-worker
+spec:
+  selector:
+    matchLabels:
+      app: pdf3-worker
+  endpoints:
+  - port: http
+    path: /metrics
+    interval: 10s
