--- a/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
@@ -3,6 +3,29 @@ kind: Kustomization
 resources:
   - ../base
 patches:
+  # - Configure dashboard ConfigMap for kube-prometheus-stack sidecar discovery
+  - target:
+      kind: ConfigMap
+      name: pdf3-dashboard
+    patch: |-
+      - op: add
+        path: /metadata/namespace
+        value: "monitoring"
+      - op: add
+        path: /metadata/labels
+        value:
+          grafana_dashboard: "1"
+      - op: add
+        path: /metadata/annotations
+        value:
+          grafana_folder: "Altinn"
+  # - Delete GrafanaDashboard CRD (only used in remote environments)
+  - patch: |-
+      $patch: delete
+      apiVersion: grafana.integreatly.org/v1beta1
+      kind: GrafanaDashboard
+      metadata:
+        name: pdf3-dashboard
   # - Add TEST_INTERNALS_MODE environment variable for local/test environment
   # - Set image and image pull policy
   # - Downscale replicas
