--- a/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/local-minimal/kustomization.yaml
@@ -29,6 +29,7 @@ patches:
   # - Add TEST_INTERNALS_MODE environment variable for local/test environment
   # - Set image and image pull policy
   # - Downscale replicas
+  # - Set browser restart interval to 1 minute for local testing
   - target:
       kind: Deployment
       name: pdf3-worker
@@ -38,6 +39,11 @@ patches:
         value:
           name: TEST_INTERNALS_MODE
           value: "true"
+      - op: add
+        path: /spec/template/spec/containers/0/env/-
+        value:
+          name: RUNTIME_PDF3_BROWSER_RESTART_INTERVAL
+          value: "2m"
       - op: replace
         path: /spec/template/spec/containers/0/image
         value: "localhost:5001/runtime-pdf3-worker:latest"
