--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ dependencies = [
     "langwatch",
     "jsonschema",
     "langchain-community",
+    "scikit-learn>=1.3.0",
+    "beautifulsoup4>=4.12.0",
 ]
 
 [build-system]
