--- a/infra/runtime/syncroot/base/grafana/contact-points/kustomization.yaml
+++ b/infra/runtime/syncroot/base/grafana/contact-points/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - folders
-  - contact-points
-  - dashboards
-  - service-accounts
+  - altinn-studio-slack.yaml
