--- a/src/Runtime/pdf3/infra/kustomize/prod/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/prod/kustomization.yaml
@@ -2,3 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
+patches:
+  - target:
+      kind: ServiceMonitor
+      name: pdf3-proxy
+    patch: |-
+      - op: replace
+        path: /apiVersion
+        value: azmonitoring.coreos.com/v1
+  - target:
+      kind: ServiceMonitor
+      name: pdf3-worker
+    patch: |-
+      - op: replace
+        path: /apiVersion
+        value: azmonitoring.coreos.com/v1
