cross namespace immport grafana dashboard

--- a/src/Runtime/pdf3/infra/kustomize/base/dashboard.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/base/dashboard.yaml
@@ -4,6 +4,7 @@ metadata:
   name: pdf3-dashboard
 spec:
   folder: "Altinn"
+  allowCrossNamespaceImport: true
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
