Containerize MCP server
- Adds dockerfile
- Adds MCP server to docker-compose
- Changes FastMCP host to `0.0.0.0`, so that the MCP is reachable for clients outside the container's network namespace

This includes a small change in pyproject.toml, that was required in order to build the service. It is the same fix that resides in branch `feature/new-mcp-tools-and-readd-codegen/`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,5 +43,8 @@ dependencies = [
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+include = ["server*", "codegen*"]
+
 [project.scripts]
 altinity-mcp = "server.main:main"
