--- a/infra/runtime/syncroot/base/grafana/contact-points/altinn-studio-slack.yaml
+++ b/infra/runtime/syncroot/base/grafana/contact-points/altinn-studio-slack.yaml
@@ -2,6 +2,7 @@ apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaContactPoint
 metadata:
   name: altinn-studio-slack
+  namespace: grafana
 spec:
   name: Altinn Studio Slack
   type: slack
