Always routing app through to localtest, so the proxy there can forward to the correct app runtime when running multiple apps

--- a/src/Runtime/localtest/loadbalancer/templates/nginx.conf.conf
+++ b/src/Runtime/localtest/loadbalancer/templates/nginx.conf.conf
@@ -51,10 +51,6 @@ http {
         server ${INTERNAL_DOMAIN}:5101;
     }
 
-    upstream app {
-        server ${HOST_DOMAIN}:5005;
-    }
-
     # Redirect localhost and the old altinn3local.no to the configured test domain
     server {
         listen 80;
@@ -97,7 +93,7 @@ http {
             subs_filter http.+\/(altinn-app-frontend\.(js|css)) $LOCAL_SUB_FILTER$1 gr;
             subs_filter_bypass $SUB_FILTER_BYPASS;
 
-            proxy_pass          http://app/;
+            proxy_pass          http://localtest/;
             error_page 502 /502App.html;
             proxy_cookie_domain altinn3local.no local.altinn.cloud;
         }
