--- a/src/Runtime/test/health/Makefile
+++ b/src/Runtime/test/health/Makefile
@@ -1,4 +1,4 @@
-.PHONY: help build
+.PHONY: help build test
 .DEFAULT_GOAL := help
 
 help: ## Show this help message
@@ -14,3 +14,14 @@ build: ## Build all packages
 	@echo "Building packages..."
 	@go build ./...
 	@echo "✓ Build successful"
+
+test: ## Run tests
+	@echo "Running tests with coverage..."
+	@go test -count=1 -coverprofile=coverage.out -covermode=count ./... || true
+	@if [ -f coverage.out ]; then \
+		go tool cover -html=coverage.out -o coverage.html; \
+		go tool cover -func=coverage.out | tail -1; \
+		echo "✓ Coverage report generated: coverage.html"; \
+	else \
+		echo "✗ No coverage data generated"; \
+	fi
