--- a/infra/runtime/syncroot/base/grafana/kustomization.yaml
+++ b/infra/runtime/syncroot/base/grafana/kustomization.yaml
@@ -2,6 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - folders
+  - alert-rules
   - contact-points
   - dashboards
+  - notification-policies
+  - notification-templates
   - service-accounts
