--- a/infra/runtime/syncroot/base/grafana/notification-policies/kustomization.yaml
+++ b/infra/runtime/syncroot/base/grafana/notification-policies/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - altinn-studio-gateway.yaml
-  - altinn-studio-slack.yaml
+  - altinn-studio.yaml
