chore: pdf - scale down old generator deployment

--- a/infra/runtime/syncroot/base/pdf.yaml
+++ b/infra/runtime/syncroot/base/pdf.yaml
@@ -82,3 +82,6 @@ spec:
         namespace: default
   values:
     environment: ${ENVIRONMENT}
+    replicaCount: 0
+    autoscaling:
+      enabled: false
