Adding events URL override + dummy-endpoint for exchanging maskinporten token. This was needed for ttd/service-task to start properly inside a docker container.

--- a/src/Runtime/localtest/docker-compose.yml
+++ b/src/Runtime/localtest/docker-compose.yml
@@ -185,6 +185,7 @@ services:
       - PlatformSettings__ApiAuthenticationEndpoint=http://altinn_localtest:5101/authentication/api/v1/
       - PlatformSettings__ApiAuthorizationEndpoint=http://altinn_localtest:5101/authorization/api/v1/
       - PlatformSettings__ApiAccessManagementEndpoint=http://altinn_localtest:5101/accessmanagement/api/v1/
+      - PlatformSettings__ApiEventsEndpoint=http://altinn_localtest:5101/events/api/v1/
       - PlatformSettings__ApiPdf2Endpoint=http://host.docker.internal:5300/pdf
     depends_on:
       - altinn_localtest
