--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -41,6 +41,13 @@ jobs:
           if-no-files-found: error
           path: src/App/frontend/dist
 
+  build-docker-images:
+    name: Build Docker Images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+
       - name: Build docker images
         working-directory: src/Runtime/localtest
         run: docker compose --profile test-apps build
@@ -65,7 +72,7 @@ jobs:
     container:
       image: cypress/browsers:node-22.13.1-chrome-133.0.6943.53-1-ff-135.0-edge-132.0.2957.140-1@sha256:914c9814a9567f32660203db7ecd610b8f8fede6e9103885728b3bd3f6dca4ff
     timeout-minutes: 60
-    needs: install
+    needs: [install, build-docker-images]
     defaults:
       run:
         working-directory: src/App/frontend/
@@ -150,7 +157,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node-22.13.1-chrome-133.0.6943.53-1-ff-135.0-edge-132.0.2957.140-1@sha256:914c9814a9567f32660203db7ecd610b8f8fede6e9103885728b3bd3f6dca4ff
-    needs: install
+    needs: [install, build-docker-images]
     defaults:
       run:
         working-directory: src/App/frontend/
