Changing name for job

--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   install:
-    name: Install
+    name: Install cypress, build frontend
     runs-on: ubuntu-latest
     defaults:
       run:
