only run workflow on changes to app-frontend

--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -3,7 +3,11 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - 'src/App/frontend/**'
   pull_request:
+    paths:
+      - 'src/App/frontend/**'
 jobs:
   lighthouse:
     name: Lighthouse CI
